--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "url": "https://github.com/knockaway/@knockaway/sqsiphon.git"
   },
   "dependencies": {
-    "abstract-logging": "^2.0.0",
-    "opentracing": "^0.14.4"
+    "abstract-logging": "^2.0.1",
+    "opentracing": "^0.14.5"
   },
   "devDependencies": {
-    "tap": "^14.10.7",
-    "eslint": "^7.3.1",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint": "^7.28.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "husky": "^4.2.5",
-    "prettier": "^2.0.5"
+    "prettier": "^2.3.1",
+    "tap": "^14.10.7"
   },
   "scripts": {
     "check-format": "prettier --list-different '*.js' 'lib/**/*.js' 'test/**/*.js'",
