--- a/.taprc
+++ b/.taprc
@@ -1,9 +1,4 @@
-files: 'test/**/*.test.js'
+coverage-map: 'coverage-map.js'
 
-# Disable extra loaders built-in to Tap
-esm: false
-jsx: false
-ts: false
-
-# Adjust accordingly if your tests need more time
-# timeout: 120
+files:
+  - 'lib/**/*.test.js'
