--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^4.2.5",
     "prettier": "^2.3.1",
-    "tap": "^14.10.7"
+    "tap": "^15.0.9"
   },
   "scripts": {
-    "check-format": "prettier --list-different '*.js' 'lib/**/*.js' 'test/**/*.js'",
-    "format": "prettier --write '*.js' 'lib/**/*.js' 'test/**/*.js'",
-    "lint": "eslint '*.js' 'lib/**/*.js' 'test/**/*.js'",
+    "check-format": "prettier --list-different '*.js' 'lib/**/*.js'",
+    "format": "prettier --write '*.js' 'lib/**/*.js'",
+    "lint": "eslint '*.js' 'lib/**/*.js'",
     "test": "LOG_LEVEL=silent tap --no-cov",
     "test:cov": "LOG_LEVEL=silent tap",
     "test:cov:html": "LOG_LEVEL=silent tap --coverage-report=html",
