--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "opentracing": "^0.14.5"
   },
   "devDependencies": {
-    "eslint": "^7.28.0",
+    "@fastify/pre-commit": "^2.0.2",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "husky": "^4.2.5",
-    "prettier": "^2.3.1",
+    "prettier": "^2.3.2",
     "tap": "^15.0.9"
   },
   "scripts": {
@@ -29,9 +29,8 @@
     "test:cov:html": "LOG_LEVEL=silent tap --coverage-report=html",
     "test:watch": "LOG_LEVEL=silent tap -n -w --no-coverage-report"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint && npm run test"
-    }
-  }
+  "precommit": [
+    "lint",
+    "test"
+  ]
 }
