--- a/.eslintrc
+++ b/.eslintrc
@@ -1,158 +1,17 @@
 {
+  "extends": ["prettier"],
+  "plugins": ["prettier"],
+
   "parserOptions": {
     "ecmaVersion": 2020,
     "sourceType": "module"
   },
 
   "env": {
-    "es6": true,
-    "es2017": true,
-    "es2020": true,
     "node": true
   },
 
-  "globals": {
-    "document": false,
-    "navigator": false,
-    "window": false,
-    "app": true
-  },
-
-  "plugins": ["prettier"],
-
   "rules": {
-    "arrow-spacing": ["error", { "before": true, "after": true }],
-    "callback-return": ["error", ["callback", "cb", "next", "done", "proceed"]],
-    "comma-spacing": ["error", { "before": false, "after": true }],
-    "comma-style": ["error", "last"],
-    "curly": ["error"],
-    "eol-last": ["error"],
-    "indent": ["error", 2, { "SwitchCase": 1 }],
-    "key-spacing": ["error", { "beforeColon": false, "afterColon": true }],
-    "linebreak-style": ["error", "unix"],
-    "prettier/prettier": ["error", { "singleQuote": true, "printWidth": 99 }],
-    "accessor-pairs": "error",
-    "constructor-super": "error",
-    "eqeqeq": ["error", "always", { "null": "ignore" }],
-    "handle-callback-err": ["error", "^(err|error)$"],
-    "new-cap": ["error", { "newIsCap": true, "capIsNew": false }],
-    "no-array-constructor": "error",
-    "no-caller": "error",
-    "no-class-assign": "error",
-    "no-compare-neg-zero": "error",
-    "no-cond-assign": "error",
-    "no-const-assign": "error",
-    "no-constant-condition": ["error", { "checkLoops": false }],
-    "no-control-regex": "error",
-    "no-debugger": "error",
-    "no-delete-var": "error",
-    "no-dupe-args": "error",
-    "no-dupe-class-members": "error",
-    "no-dupe-keys": "error",
-    "no-duplicate-case": "error",
-    "no-empty-character-class": "error",
-    "no-empty-pattern": "error",
-    "no-eval": "error",
-    "no-ex-assign": "error",
-    "no-extend-native": "error",
-    "no-extra-bind": "error",
-    "no-extra-boolean-cast": "error",
-    "no-fallthrough": "error",
-    "no-floating-decimal": "error",
-    "no-func-assign": "error",
-    "no-global-assign": "error",
-    "no-implied-eval": "error",
-    "no-inner-declarations": ["error", "functions"],
-    "no-invalid-regexp": "error",
-    "no-irregular-whitespace": "error",
-    "no-mixed-spaces-and-tabs": ["error", "smart-tabs"],
-    "no-mixed-operators": [
-      "error",
-      {
-        "groups": [
-          ["==", "!=", "===", "!==", ">", ">=", "<", "<="],
-          ["&&", "||"],
-          ["in", "instanceof"]
-        ],
-        "allowSamePrecedence": true
-      }
-    ],
-    "no-multi-spaces": "error",
-    "no-iterator": "error",
-    "no-label-var": "error",
-    "no-labels": ["error", { "allowLoop": false, "allowSwitch": false }],
-    "no-lone-blocks": "error",
-    "no-multi-str": "error",
-    "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 0 }],
-    "no-trailing-spaces": ["error"],
-    "no-negated-in-lhs": "error",
-    "no-new": "error",
-    "no-new-func": "error",
-    "no-new-object": "error",
-    "no-new-require": "error",
-    "no-new-symbol": "error",
-    "no-new-wrappers": "error",
-    "no-obj-calls": "error",
-    "no-octal": "error",
-    "no-octal-escape": "error",
-    "no-path-concat": "error",
-    "no-proto": "error",
-    "no-redeclare": "error",
-    "no-regex-spaces": "error",
-    "no-return-assign": ["error", "except-parens"],
-    "no-return-await": "error",
-    "no-self-assign": "error",
-    "no-self-compare": "error",
-    "no-sequences": "error",
-    "no-shadow-restricted-names": "error",
-    "no-sparse-arrays": "error",
-    "no-template-curly-in-string": "error",
-    "no-this-before-super": "error",
-    "no-throw-literal": "error",
-    "no-undef": "error",
-    "no-undef-init": "error",
-    "no-unexpected-multiline": "error",
-    "no-unmodified-loop-condition": "error",
-    "no-unneeded-ternary": ["error", { "defaultAssignment": false }],
-    "no-unreachable": "error",
-    "no-unsafe-finally": "error",
-    "no-unsafe-negation": "error",
-    "no-unused-expressions": [
-      "error",
-      { "allowShortCircuit": true, "allowTernary": true, "allowTaggedTemplates": true }
-    ],
-    "no-unused-vars": ["error", { "vars": "all", "args": "none", "ignoreRestSiblings": true }],
-    "no-use-before-define": [
-      "error",
-      { "functions": false, "classes": false, "variables": false }
-    ],
-    "no-useless-call": "error",
-    "no-useless-computed-key": "error",
-    "no-useless-constructor": "error",
-    "no-useless-escape": "error",
-    "no-useless-rename": "error",
-    "no-useless-return": "error",
-    "semi": ["error", "always"],
-    "no-with": "error",
-    "one-var": ["error", { "initialized": "never" }],
-    "prefer-promise-reject-errors": "error",
-    "spaced-comment": [
-      "error",
-      "always",
-      {
-        "line": { "markers": ["*package", "!", "/", ","] },
-        "block": {
-          "balanced": true,
-          "markers": ["*package", "!", ",", ":", "::", "flow-include"],
-          "exceptions": ["*"]
-        }
-      }
-    ],
-    "symbol-description": "error",
-    "use-isnan": "error",
-    "valid-typeof": ["error", { "requireStringLiterals": true }],
-    "yoda": ["error", "never"]
-  },
-
-  "extends": ["prettier"]
+    "prettier/prettier": "error"
+  }
 }
