--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@knockaway/sqsiphon",
   "main": "index.js",
-  "version": "1.1.1",
+  "version": "1.2.0-rc.1",
   "homepage": "https://github.com/knockaway/sqsiphon",
   "license": "MIT",
   "repository": {
